[package]
name = "nether-helsinki"
version = "0.1.0"
authors = ["Ninjapiraatti <tuoppil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
